Test: Unit and Integration Tests are adde, Service algrotihms updated

--- a/BlueHarvest_Case.API/BlueHarvest_Case.API.csproj
+++ b/BlueHarvest_Case.API/BlueHarvest_Case.API.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0fe23d25-e775-4342-83cb-644b31f56f5b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<IsTestProject>true</IsTestProject>
+	<PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
