--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '9.0'
 
       - name: 📦 Restore Dependencies
-        run: dotnet restore --force
+        run: dotnet restore
 
       - name: 🏗️ Build Solution
         run: dotnet build --no-restore --configuration Release
 
       - name: ✅ Run Unit and Integration Tests
-        run: dotnet test --no-build --configuration Release --logger trx
+        run: dotnet test BlueHarvest_Case.Tests/BlueHarvest_Case.Tests.csproj --no-build --configuration Release --logger trx
