--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - master
-      - dev
+      - feature/*
+      - fix/*
   pull_request:
     branches:
       - master
