--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           dotnet-version: '9.0'
 
       - name: 📦 Restore Dependencies
-        run: dotnet restore BlueHarvest_Case.sln
+        run: find . -name "*.csproj" -exec dotnet restore {} \;
 
       - name: 🏗️ Build Solution
         run: dotnet build --no-restore --configuration Release
