--- a/BH.Case.API/appsettings.json
+++ b/BH.Case.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=BH_Case;Username=postgres;Password=postgres"
+  }
+} 
