--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ networks:
     name: BH_Network
     driver: bridge
 
+volumes:
+  postgres-data:
+    name: bh-postgres-data
+
 services:
   web:
     build: 
@@ -13,9 +17,12 @@ services:
     ports:
       - "8080:8080"
     environment:
+      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=BH_Case;Username=postgres;Password=postgres;
       - ASPNETCORE_ENVIRONMENT=Development
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - OPENAPI_SERVER_URL=http://localhost:8080
+    depends_on:
+      - db
     networks:
       - bh_network
 
@@ -43,3 +50,16 @@ services:
       - web
     networks:
       - bh_network
+
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: BH_Case
+    ports:
+      - "5433:5432"
+    networks:
+      - bh_network
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
